# rust-skia-performance-test

./: Cargo.toml
assets/: path.txt
src/: main.rs
