[package]
name = "rust-skia-performance-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
skia-safe = { version = "0.64.0", features = ["textlayout", "svg"] }
clap = { version = "4.4.1", features = ["derive"] }